add java opts for jvm in docker